istio-config/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nodej-istio-security-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodej-istio-security-greeting
spec:
  hosts:
  - "*"
  gateways:
  - nodej-istio-security-gateway
  http:
  - match:
    - uri:
        prefix: /nodej-istio-security/
    - uri:
        prefix: /nodej-istio-security
    rewrite:
      uri: /
    route:
    - destination:
        host: nodej-istio-security-greeting
        port:
          number: 8080
